--- a/recipes-mgmt/un-orchestrator/files/uno.service
+++ b/recipes-mgmt/un-orchestrator/files/uno.service
@@ -1,10 +1,10 @@
 [Unit]
 Description=un-Orchestrator
-After=uno-prestart.service
+Requires=openvswitch-nonetwork.service
 
 [Service]
 EnvironmentFile=/etc/uno/env
-ExecStartPre=/etc/uno/remove-bridges.sh
+ExecStartPre=/etc/uno/prestart.sh
 ExecStart=/usr/bin/node-orchestrator --d $CONFIG
 Restart=on-failure
 
