--- a/recipes-mgmt/un-orchestrator/files/uno-prestart.service
+++ b/recipes-mgmt/un-orchestrator/files/uno-prestart.service
@@ -3,6 +3,7 @@ Description=Open OVSDB ports for the un-Orchestrator
 After=openvswitch-nonetwork.service
 
 [Service]
+Type=simple
 EnvironmentFile=/etc/uno/preconf
 ExecStart=/usr/bin/ovs-appctl -t ovsdb-server ovsdb-server/add-remote ptcp:$PORT
 
