--- a/recipes-mgmt/un-orchestrator/files/uno.service
+++ b/recipes-mgmt/un-orchestrator/files/uno.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=un-Orchestrator
-After=uno-prestart.service
+Requires=uno-prestart.service
 
 [Service]
 EnvironmentFile=/etc/uno/env
