[name-resolver] fix path in service file

--- a/recipes-mgmt/un-orchestrator/files/uno-name-resolver.service
+++ b/recipes-mgmt/un-orchestrator/files/uno-name-resolver.service
@@ -6,7 +6,7 @@ After=uno.service
 [Service]
 PIDFile=/run/uno-name-resolver/pid
 WorkingDirectory=/etc/uno-name-resolver
-ExecStart=name-resolver --f config/config.xml
+ExecStart=/usr/bin/name-resolver --f config/config.xml
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
 
