--- a/recipes-mgmt/un-orchestrator/files/uno.service
+++ b/recipes-mgmt/un-orchestrator/files/uno.service
@@ -7,6 +7,7 @@ EnvironmentFile=/etc/uno/env
 ExecStartPre=/etc/uno/prestart.sh
 ExecStart=/usr/bin/node-orchestrator --d $CONFIG
 Restart=on-failure
+WorkingDirectory=/etc/uno
 
 [Install]
 WantedBy=network.target
